# DAxolotl

./: .env.example  .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/daxolotl/: __init__.py  auth.py  cli.py  config.py  db.py  decimation.py  ingest.py  main.py  models.py  storage.py  util.py
backend/daxolotl/loaders/: base.py  tdms.py
backend/daxolotl/processing/: filters.py  thermocouples.py  valves.py
backend/daxolotl/processing/data/: k_type.txt  t_type.txt
backend/daxolotl/routers/: data.py  datasets.py  scripts.py
backend/daxolotl/scripting/: runtime.py
backend/tests/: conftest.py  test_decimation.py  test_smoke.py  test_step3_api.py  test_tdms_loader.py  test_thermocouples.py  test_valves.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: channelData.ts  datasets.ts
frontend/src/components/analysis/: AnalysisSidebar.tsx  AnalysisTools.tsx  AreaPanel.tsx  FftControls.tsx  FftPanel.tsx  HistogramPanel.tsx  PolyfitPanel.tsx  StatsPanel.tsx  analysisTypes.ts
frontend/src/components/layout/: AppHeader.tsx  AppShell.tsx  AppShellContainer.tsx  AppToolbar.tsx
frontend/src/components/plot/: PlotView.tsx  PlotViewContainer.tsx
frontend/src/components/setup/: PlotSetup.tsx
frontend/src/lib/: plotUtils.ts
frontend/src/store/: cursors.ts  datasets.ts  tabs.ts  views.ts
frontend/src/types/: index.ts
