[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daxolotl"
version = "0.0.1"
description = "Test data analysis tool for rocket engine hotfires and coldflows."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "numpy>=2.0",
    "scipy>=1.14",
    "pandas>=2.2",
    "nptdms>=1.9",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyarrow>=18.0",
    "typer>=0.15",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "httpx>=0.28",
]

[project.scripts]
daxolotl = "daxolotl.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["backend/daxolotl"]

[tool.hatch.build.targets.wheel.sources]
"backend/daxolotl" = "daxolotl"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["reference"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "backend"
exclude = ["reference/"]